<resources>
	<string name="app_name">台灣天氣</string>

	<string name="action_settings">Settings</string>
	<string name="navigation_drawer_open">Open Drawer</string>
	<string name="navigation_drawer_close">Close Drawer</string>
	<string name="search">search</string>

	<string name="preference_portal">即時氣象動態</string>
	<string name="forty_eight_forecast">48 小時天氣預報</string>
	<string name="one_week_forecast">一週天氣</string>
	<string name="one_week_travel">一週旅遊</string>
	<string name="three_days_sea">三天海上預報</string>
	<string name="near_sea">近海預報</string>
	<string name="tide">潮汐預報</string>
	<string name="obs">觀測站資料</string>
	<string name="global">全球天氣</string>
	<string name="images">各式天氣圖</string>

<!-- TODO: Remove or change this placeholder text -->
	<string name="hello_blank_fragment">Hello blank fragment</string>
	<string name="preference">關注區域</string>
	<string name="overview">天氣概況</string>
	<string name="atmospheric">空氣品質 (PM2.5)</string>

</resources>
